# encrypted-tao

./: .env  .gitignore  Cargo.toml  Justfile  README.md  shell.nix  tao-cli  tao-server
src/: data.rs  db_client.rs  lib.rs  main.rs  ope.rs
src/crypt/: mod.rs
src/db_client/: data.rs
src/ope/: hgd.rs  mod.rs  ope.rs  stats.rs  utils.rs
src/query/: ast.rs  crypto.rs  mod.rs  parser.rs  query.rs  results.rs  tao.pest  translator.rs
src/service/: mod.rs  stao.rs  tao.rs
src/tao/: ast.rs  mod.rs  parser.rs  translator.rs
