[package]
name = "encrypted-tao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
crypto="0.4.0"
rand_distr="0.4.3"
hmac="0.12.1"
aes="0.8.2"
sha2="0.10.6"
aes-prng="0.2.0"
generic-array = "0.14.7"
pest = "2.5.6"
pest_derive = "2.5.6"
postgres = "0.19.5"
