[package]
name = "encrypted-tao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac="0.12.1"
aes="0.8.2"
sha2="0.10.6"
generic-array = "0.14.7"
actix-rt = "2.8.0"
actix-web = { version = "4.3.1", features = ["openssl"] }
awc = { version = "3.1.1", features = ["openssl"] }
dotenv = "0.15.0"
futures = "0.3.28"
pest = "2.5.6"
pest_derive = "2.5.6"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_postgres = "0.2.0"
tokio = { version = "1.27.0", features = [ "full" ] }
tokio-postgres = "0.7.8"
rust-crypto = "0.2.36"
comp = "0.2.1"
tink-core = "0.2.5"
tink-daead = "0.2.5"
tink-proto = "0.2.5"
base64 = "0.21.0"

[[bin]]
name="tao-server"
path = "src/bin/server.rs"

[[bin]]
name="tao-cli"
path = "src/bin/cli.rs"

[[bin]]
name="tao-interactive"
path = "src/bin/interactive.rs"
